test/with11.slq
def foo(const x:ğ”¹){
	with{ y:=X(x); }do{ /// error
		return y;
	}
}
